--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "okta"
   ],
   "dependencies": {
+    "jose": "^6.1.0",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -51,9 +55,7 @@
     "commander": "^14.0.0",
     "express": "^5.1.0",
     "jest": "^30.1.3",
-    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
